fix oversize images on mobile issue.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -286,4 +286,8 @@ a {
     font-size: 1.05em;
     text-decoration: underline #333333;
   }
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
